--- a/pages/greenery.html
+++ b/pages/greenery.html
@@ -30,30 +30,8 @@
 </head>
 <body>
 
-    <!-- Navigation Section -->
-   <nav>
-    <div class="logo">
-         <a href="../index.html">
-            <img src="../images/logo.png" alt="OT3 Photography Logo" class="logo-img">
-        </a>
-    </div>
-    <ul>
-        <li><a href="../pages/about.html">About</a></li>
-        <li><a href="../pages/marine_life.html">Marine Life</a></li>
-        <li><a href="../pages/reptiles.html">Reptiles</a></li>
-        <li><a href="../pages/birds.html">Birds</a></li>
-        <li><a href="../pages/greenery.html">Greenery</a></li>
-        <li><a href="../pages/surfing.html">Surfing</a></li>
-        <li><a href="../pages/volcanoes.html">Volcanoes</a></li>
-        <li><a href="../pages/contact.html">Contact</a></li>
-    </ul>
-    <div class="menu-toggle">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-    </div>
-</nav>
-
+    <!-- Placeholder for Header -->
+    <div id="header"></div>
 
     <!-- Main Content -->
     <section id="intro">
@@ -61,10 +39,18 @@
         <p>Explore the beauty of underwater greenery and landscapes through stunning photography. Select a region to discover the diverse plant life that thrives in different environments.</p>
     </section>
 
-    <!-- Footer -->
-<footer>
-    <p>&copy; 2024 OT3 Photography</p>
-</footer>
+    <!-- Placeholder for Footer -->
+    <div id="footer"></div>
+
+    <!-- JavaScript to load header and footer -->
+    <script src="../assets/js/loadHTML.js"></script>
+
+    <script>
+        // Load the header and footer from the HTML files
+        loadHTML('../partials/header.html', '#header');
+        loadHTML('../partials/footer.html', '#footer');
+    </script>
+
 
 <!-- JavaScript for Mobile Menu -->
 <script>
