--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <div id="footer"></div>
 
     <!-- JavaScript to load header and footer -->
-    <script src="/assets/js/loadHTML.js"></script>
+    <script src="assets/js/loadHTML.js"></script>
 
     <script>
         // Load the header and footer from the HTML files
-        loadHTML('/partials/header.html', '#header');
-        loadHTML('/partials/footer.html', '#footer');
+        loadHTML('partials/header.html', '#header');
+        loadHTML('partials/footer.html', '#footer');
     </script>
 
     <!-- JavaScript for Mobile Menu -->
